src/app/reports/employees/org-dropdown/org-dropdown.component.css
.emp-cont {
  opacity: 1;
  color: black;
  transition: color 0.5s;
}

ul.emp-cont-inner {
  list-style-type: none;
  padding-left: 15px;
  margin-bottom: 0;
}

.emp-name {
  position: relative;
  left: -1px;
  padding: 10px;
  width: 200px;
  background-color: rgb(250, 250, 250);
  display: inline-block;
  border-left: 1px solid lightgrey;
}

div.team-cont {
  /* transition: max-height 1.0s ease-out;
  max-height: 0; */
}

div.team-cont.collapse {
  /* max-height: 0; */
}

i.fa.expand-collapse {
  padding-left: 5px;
  padding-right: 5px;
  font-size: 14px;
}

.expand-collapse-icon-cont, .emp-name-cont {
  display: inline-block;
  cursor: pointer;
}

div.emp-name-cont:hover {
  color: rgb(23, 106, 167);
}

